--- a/css/music.css
+++ b/css/music.css
@@ -1,10 +1,3 @@
-body, html{
- 
- height: 100%;
- background-position: center;
- background-size: cover;
- background-repeat: no-repeat;
-}
 
 /* Table of Content
 ==================================================
@@ -37,7 +30,7 @@ body {
     height: 100%;
     font-family: 'Poppins', sans-serif;
     line-height: 1.8;
-    color: #999
+    color: #FCA311
 }
 
 .no-padding {
@@ -76,7 +69,7 @@ a {
 }
 
 .color {
-    color: #ffbf00;
+    color: #14213D;
     font-size: 11px;
 }
 
@@ -85,17 +78,17 @@ a {
 ==================================================*/
 
 h1 {
-    color: #393939;
+    color: #FCA311;
     font-size: 60px;
     text-transform: uppercase;
 }
 
 h3 {
-    color: #393939;
+    color: #ffffff;
 }
 
 h5 {
-    color: #ffbf00;
+    color: #e5e5e5;
 }
 
 
@@ -108,7 +101,6 @@ h5 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #f5f5f5;
     /* change if the mask should be a color other than white */
     z-index: 1000;
     /* makes sure it stays on top */
@@ -239,7 +231,7 @@ h5 {
 }
 
 .box-primary-nav-trigger .box-menu-text {
-    color: #393939;
+    color: #FCA311;
     text-transform: uppercase;
     font-weight: 700;
     display: none;
@@ -426,6 +418,10 @@ h5 {
     display: table;
     height: 100vh;
     width: 100%;
+   background-image: url(/media/images/index.gif);
+    background-position: center;
+ background-size: contain;
+ background-repeat: no-repeat;
 }
 
 .box-intro .table-cell {
