--- a/css/socials.css
+++ b/css/socials.css
@@ -1,4 +1,4 @@
-body, html {
+.box-intro {
   background-image:url(/socials/media/images/socials.gif);
   height: 100%;
   background-position: center;
@@ -6,4 +6,14 @@ body, html {
   background-repeat: no-repeat;
 }
   
+.box-intro {
+    text-align: center;
+    display: table;
+    height: 100vh;
+    width: 100%;
+  
+    background-position: center;
+ background-size: contain;
+ background-repeat: no-repeat;
+}
 
